maybe fix mobile overflow

--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -24,4 +24,5 @@
 .hide-overflow {
   overflow: hidden;
   position: relative;
+  height: 100%;
 }
